edit height for services media query to prevent overlapping of text on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ i {
 @media screen and (max-width: 1393px) {
     #services {
         width: 100%;
-        height: 1100px;
+        height: 750px;
         margin: 0 auto;
         padding-left: 5%;
         
@@ -400,6 +400,14 @@ i {
         left: 0px;
        
 
+    }
+
+    #services {
+        width: 100%;
+        height: 1000px;
+        margin: 0 auto;
+        padding-left: 5%;
+        
     }
 
 }
